deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dataviz
  labels:
    app.kubernetes.io/name: dataviz
    app.kubernetes.io/part-of: dataviz
